# Nrf52832Robot

./: .gitignore  CMakeLists.txt  Cm4.cmake  LICENSE  Makefile  Makefile.posix  Makefile.windows  README.md  clock.c  clock.h  gpio.c  main.c  ozoneProject.jdebug  stepMotorDriver.h  temp.c  temp.h  timer.c
linker/: nrf52832_xxab.ld
src/: gpio.c  gpio.h  main.c  mpu9250.c  mpu9250.h  pinInterrupt.c  pinInterrupt.h  stepMotorDriver.c  stepMotorDriver.h  systemTime.c  systemTime.h  temp.c  temp.h  timer.c  timer.h  twim.c  twim.h
